# myWork

./: README.md  cursor_accounts.txt  package-lock.json
NFC_Reading/: App.uvue  README.md  main.js  manifest.json  pages.json
NFC_Reading/pages/index/: index.uvue
NFC_Reading/uni_modules/nfc-module/: package.json
Python/Equipments/: EnhancedMatch.py  EnhancedResult.xlsx  EnhancedResult_Combined.xlsx  EnhancedResult_Combined_New.xlsx  EnhancedResult_Combined_New_手动处理.xlsx  Filter.py  MatchByPython.py  MatchByPython_Combined.py  MatchByPython_Combined_Improved.py  MatchByPython_Hierarchical.py  MatchByPython_SingleColumn.py  Result.xlsx  Result_Combined.xlsx  Result_Combined_Improved.xlsx  Result_Hierarchical.xlsx  Result_SingleColumn.xlsx  analyze_combined.py  analyze_hierarchical.py  analyze_improved.py  analyze_result.py  analyze_single_column.py  check_column.py  color_distribution.csv  device_titles.xlsx  equipment_stats.xlsx  grok.py  main.py  normalized_data.csv  phones.csv  processed_phones.csv  processed_phones_backup.csv  total_quantity.csv  ~$新合并.xlsx  新合并 0.xlsx  新合并.xlsx  机型参数数据20250402.csv  机型参数数据合并压缩20250402.csv  机型表.xlsx
Python/Pic_Color/: cv2_both+_bk_before.py  cv2_both+_blue.py  cv2_both+_blue_before.py
Python/Pic_Color/Codes/: cv2_Jitter.py  cv2_both+.py  cv2_both.py  cv2_change.py
Python/Pic_Color/Pic_Color_Select【成品】/: README.md  cv2_both+_bk.py.backup  (+14 more)
Python/Pic_Color/Pic_Color_Select【成品】/pic_color_processor/: README.md  __init__.py  pic_color_processor.py  processor.py  pyproject.toml
Web/app-download-page/: README.md  index.html
(+110 files in other folders)
