[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pic_color_processor"
version = "0.1.0"
description = "A library to process images for e-ink display data generation using dithering."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "opencv-python",
    "scikit-learn"
]
license = {text = "MIT"}