[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pic_color_processor"
version = "0.1.0"
description = "一个用于图像处理和墨水屏数据生成的Python库"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "opencv-python",
    "scikit-learn"
]
license = {text = "MIT"}

[project.classifiers]
"Programming Language :: Python :: 3" = true
"License :: OSI Approved :: MIT License" = true
"Operating System :: OS Independent" = true
"Topic :: Scientific/Engineering :: Image Processing" = true
"Topic :: Software Development :: Libraries :: Python Modules" = true